     * redid some outdoor maps to be more interesting
   * Son of the Black Eye
     * fixed Gruu not appearing in Siege of Barag Gor (#5156)
 * WML improvements
   * moved much of about into WML as well as enabled campaign [about]
   * added a #undef preprocessor directive
   * added 'profile' key to [unit] variables
   * added [label] inside [event]
 * language and i18n:
   * new translations: Vietnamese
   * updated translations: Catalan, Czech, German, Hebrew, Italian,
     Portuguese (Brazil), Turkish
   * updated man pages: Swedish
 * miscellaneous
   * reordered macro calls in game.cfg to fix no-AMLA bug for campaigns
   * {abilities.cfg} call moved from utils.cfg to game.cfg for consistency
   * Send message on player ban or kick
   * Show a message when a player leaves a game.
   * WML-generated units with "random_traits" now show the traits description
   * flags on village don't "flicker" at the end of their animations
 * graphics
   * new attack icons: animal fangs, axe, baneblade, battle axe, claws-animal, faery touch, fireball, fist-troll, fist-skeletal, hammer, hatchet, lightbeam, lightning, magic missile, necromatic staff, magic staff, spear
   
Version 1.1.1:
 * campaigns
   * reordered ranks to reflect relevance to game world
   * new (beginner) campaign: Two Brothers
   * Heir to the Throne
     * Gryphons are not available until you find dwarves to ride them
     * Fixed behavior of sleeping gryphons in Gryphon Mountain
     * Changed confusing dialog on Home of the North Elves (#5006)
     * Standardized wording for bonus victory objectives
     * Lost General map now slightly more friendly to smallfoot units
     * Sceptre of Fire - more villages and dirt road near starting castle
     * Underground scenarios generally more interesting/enhanced story
     * Text cleanups
   * The Rise of Wesnoth
     * replaced Sea Orc with Naga Fighter in Final Spring, Clearwater Port, and
       Rise of Wesnoth
     * Fire dragon is a level 5 unit