@@ -17,6 +17,7 @@ SVN trunk (1.1.1+svn):
    * added a #undef preprocessor directive
    * added 'profile' key to [unit] variables
    * added [label] inside [event]
+   * attack animations can now be filtered on hit an miss
  * language and i18n:
    * new translations: Vietnamese
    * updated translations: Catalan, Czech, German, Hebrew, Italian,
